@@ -1,3 +1,7 @@
+2005-07-18  Lutz Mueller <lutz@users.sourceforge.net>
+
+	* doc/Makefile.am: Make distcheck work again.
+
 2005-07-11  Lutz Mueller <lutz@users.sourceforge.net>
 
 	* libexif/exif-loader.c:
